Fixes social icon cut off on people bio pages.

--- a/styleguide/source/assets/scss/05-pages/_people_bio.scss
+++ b/styleguide/source/assets/scss/05-pages/_people_bio.scss
@@ -39,4 +39,10 @@
       }
     }
   }
+
+  .ama__masthead__content__share-wrapper {
+    @include breakpoint($bp-med) {
+      display: block;
+    }
+  }
 }
